Fix livechat overflow

--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ form input.form-control:focus {
 
 .live-chat {
     width:100%;
-    height:100%;
+    height:calc(100% - 54px);
     background-image:url('./img/mine.jpg');
     overflow-y:auto;
 }
